components/support/error/tests/returns_not_result.stderr
error[E0308]: mismatched types
  --> returns_not_result.rs:41:2
   |
41 |  #[handle_error]
   |  ^^^^^^^^^^^^^^^ expected struct `String`, found enum `std::result::Result`
42 |  fn func() -> String {
   |               ------ expected `String` because of return type
   |
   = note: expected struct `String`
                found enum `std::result::Result<String, ExternalError>`
   = note: this error originates in the attribute macro `handle_error` (in Nightly builds, run with -Z macro-backtrace for more info)
